tests/snapshots/snapshot_session_list__create_in_progress_statusbar.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
 ▌ ○  alpha  1w               │ ○ alpha  +                                      
       claude · /tmp/work     │                                                 
                              │  preview: capturing…                            
                              │                                                 
                              │                                                 
 bosun  v2.1.13 ⟳ creating rocket-fox…↵ attach · n new · E edit · g group · 1-9
