tests/snapshots/snapshot_session_list__empty_session_list.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
                              │                                                 
  no tmux sessions            │   ▄                                             
  (press n to create · g for a│   █▀▀█ █▀▀█ █▀▀▀ █  █ █▀▀▄                      
                              │   █  █ █  █ ▀▀▀█ █  █ █  █                      
                              │   ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀  ▀                      
                              │                                                 
                              │   v2.1.14 · TDF banner: opencode                
                              │                                                 
                              │   press n to create a session                   
 bosun  v2.1.14 0 sessions↵ attach · n new · E edit · g group · 1-9 move · R ren
