tests/snapshots/snapshot_session_list__mixed_statuses.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
   ●  build  1w               │ ◐ review  +                                     
       claude · /tmp/work     │                                                 
 ▌ ◐  review  1w  •attached   │  preview: capturing…                            
       claude · /tmp/work     │                                                 
   ○  shell  1w               │                                                 
       claude · /tmp/work     │                                                 
   ✕  crashed  1w             │                                                 
       claude · /tmp/work     │                                                 
                              │                                                 
 bosun  v2.1.13 4 sessions↵ attach · n new · E edit · g group · 1-9 move · R ren
